<resources>
    <string name="app_name">YourTime</string>
    <string name="title_home">Accueil</string>
    <string name="title_stats">Historique</string>
    <string name="title_perso">Personalisation</string>


    <string name="test">In HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitions:In HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
        and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitions</string>
    <string name="colorPick">Boutton pour choisir la couleur du théme</string>
    <string name="addImage">Button pour choisir l image de fond</string>
    <string name="colorPickTitle">Choisissez la couleur du thème</string>
    <string name="button_parameter">Acceder parametre</string>
    <string name="image">test image</string>
    <string name="image2">test2 image</string>
    <string name="textColor">Couleur du thème : </string>
    <string name="textImgFond">Image de fond : </string>
    <string name="impImage">Importer une image </string>
    <string name="plus">+</string>
    <string name="import_sound">Importez l\'audio : </string>
    <string name="sound_name">Nom de l\'audio : </string>
    <string name="sound_record">Enregistrez l\'audio : </string>
    <string name="sound_time">Temps d\'audio maximum de 5 secondes : </string>
    <string name="ok">OK</string>
</resources>